[gd_scene load_steps=42 format=3 uid="uid://2fjcvrt205ll"]

[ext_resource type="PackedScene" uid="uid://bkanswhebslef" path="res://blends/protagonist.blend" id="1_biyqc"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_sirlr"]
[ext_resource type="ArrayMesh" uid="uid://e7slvect3wob" path="res://blends/beam.obj" id="3_gdp7b"]
[ext_resource type="Shader" uid="uid://dvcev4j13r8gr" path="res://fireball_shader.tres" id="3_s46m6"]
[ext_resource type="Texture2D" uid="uid://dtjbjbflryxcc" path="res://assets/noise.png" id="4_4006n"]
[ext_resource type="AudioStream" uid="uid://5x3cee0uwlv4" path="res://audio/459145__matrixxx__retro-pew-shot.wav" id="6_ib7tl"]
[ext_resource type="AudioStream" uid="uid://dxs3qdu6aqmkb" path="res://audio/660463__guillermochicasonido__energy-blast-[AudioTrimmer.com].wav" id="7_fjnvp"]

[sub_resource type="Gradient" id="Gradient_03kki"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2ee0h"]
gradient = SubResource("Gradient_03kki")
fill_from = Vector2(0, 0.864734)
fill_to = Vector2(0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xu1t1"]
render_priority = 0
shader = ExtResource("3_s46m6")
shader_parameter/ColorParameter = Color(2, 0.5, 0, 1)
shader_parameter/TextureSpeed = Vector2(1, -3)
shader_parameter/Have_Gradient = true
shader_parameter/Power = 1.0
shader_parameter/Main_Texture = ExtResource("4_4006n")
shader_parameter/Gradient_Texture = SubResource("GradientTexture2D_2ee0h")

[sub_resource type="Curve" id="Curve_jg4fp"]
max_value = 4.0
_data = [Vector2(0, 4), 0.0, 0.0, 0, 0, Vector2(0.8, 4), 0.0, 0.0, 0, 0, Vector2(0.9, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_qhw5k"]
max_value = 4.0
_data = [Vector2(0, 4), 0.0, 0.0, 0, 0, Vector2(0.8, 4), 0.0, 0.0, 0, 0, Vector2(0.9, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_1un4c"]
max_value = 15.0
_data = [Vector2(0, 1), 0.0, 71.2005, 0, 0, Vector2(0.3, 15), 0.0, 0.0, 0, 0, Vector2(1, 15), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_03q6w"]
curve_x = SubResource("Curve_jg4fp")
curve_y = SubResource("Curve_qhw5k")
curve_z = SubResource("Curve_1un4c")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jx7c5"]
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveXYZTexture_03q6w")

[sub_resource type="Gradient" id="Gradient_uw3em"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mf2ww"]
gradient = SubResource("Gradient_uw3em")
fill_from = Vector2(0, 0.888889)
fill_to = Vector2(0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xuvpp"]
render_priority = 0
shader = ExtResource("3_s46m6")
shader_parameter/ColorParameter = Color(1.502, 1, 0.2, 1)
shader_parameter/TextureSpeed = Vector2(1, -2)
shader_parameter/Have_Gradient = true
shader_parameter/Power = 1.0
shader_parameter/Main_Texture = ExtResource("4_4006n")
shader_parameter/Gradient_Texture = SubResource("GradientTexture2D_mf2ww")

[sub_resource type="Curve" id="Curve_d30po"]
max_value = 3.0
_data = [Vector2(0, 4), 0.0, 0.0, 0, 0, Vector2(1e-05, 3), 0.0, 0.0, 0, 0, Vector2(0.8, 3), 0.0, 0.0, 0, 0, Vector2(0.9, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_oipi0"]
max_value = 3.0
_data = [Vector2(0, 3), 0.0, 0.0, 0, 0, Vector2(0.8, 3), 0.0, 0.0, 0, 0, Vector2(0.9, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_a33nh"]
max_value = 15.0
_data = [Vector2(0, 1), 0.0, 71.2005, 0, 0, Vector2(0.3, 15), 0.0, 0.0, 0, 0, Vector2(1, 15), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_5j8go"]
curve_x = SubResource("Curve_d30po")
curve_y = SubResource("Curve_oipi0")
curve_z = SubResource("Curve_a33nh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k7l8k"]
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveXYZTexture_5j8go")

[sub_resource type="BoxShape3D" id="BoxShape3D_daryl"]
size = Vector3(6, 6, 13)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kmx8q"]
radius = 0.4

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_m0kp1"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_1plvn"]
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_m3qn5"]
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_ko84r"]
xfade_time = 0.1
input_0/name = "Idle"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "Run"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "Jump"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true
input_3/name = "Stress"
input_3/auto_advance = false
input_3/break_loop_at_end = false
input_3/reset = true

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_twfqy"]
filter_enabled = true
filters = ["Armature/Skeleton3D:lowerarm.l", "Armature/Skeleton3D:upperarm.l"]
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_73hm7"]
filter_enabled = true
filters = ["Armature/Skeleton3D:lowerarm.r", "Armature/Skeleton3D:upperarm.r"]
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gl2x3"]
animation = &"beam"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lspsr"]
animation = &"dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0j7ho"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wvcgl"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qnvb6"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m40x2"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cvdf2"]
animation = &"shootleft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ckkfp"]
animation = &"shootright"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1kqce"]
animation = &"stress"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_7es62"]
graph_offset = Vector2(-660.702, 23.6587)
nodes/Beam/node = SubResource("AnimationNodeOneShot_m0kp1")
nodes/Beam/position = Vector2(140, 60)
nodes/Dash/node = SubResource("AnimationNodeOneShot_1plvn")
nodes/Dash/position = Vector2(-500, 60)
nodes/Death/node = SubResource("AnimationNodeOneShot_m3qn5")
nodes/Death/position = Vector2(380, 60)
nodes/Movement/node = SubResource("AnimationNodeTransition_ko84r")
nodes/Movement/position = Vector2(-700, 40)
nodes/ShootLeft/node = SubResource("AnimationNodeOneShot_twfqy")
nodes/ShootLeft/position = Vector2(-300, 60)
nodes/ShootRight/node = SubResource("AnimationNodeOneShot_73hm7")
nodes/ShootRight/position = Vector2(-80, 60)
nodes/beam/node = SubResource("AnimationNodeAnimation_gl2x3")
nodes/beam/position = Vector2(-80, 320)
nodes/dash/node = SubResource("AnimationNodeAnimation_lspsr")
nodes/dash/position = Vector2(-700, 320)
nodes/death/node = SubResource("AnimationNodeAnimation_0j7ho")
nodes/death/position = Vector2(140, 320)
nodes/idle/node = SubResource("AnimationNodeAnimation_wvcgl")
nodes/idle/position = Vector2(-960, 0)
nodes/jump/node = SubResource("AnimationNodeAnimation_qnvb6")
nodes/jump/position = Vector2(-960, 320)
nodes/output/position = Vector2(620, 120)
nodes/run/node = SubResource("AnimationNodeAnimation_m40x2")
nodes/run/position = Vector2(-960, 160)
nodes/shootleft/node = SubResource("AnimationNodeAnimation_cvdf2")
nodes/shootleft/position = Vector2(-500, 320)
nodes/shootright/node = SubResource("AnimationNodeAnimation_ckkfp")
nodes/shootright/position = Vector2(-300, 320)
nodes/stress/node = SubResource("AnimationNodeAnimation_1kqce")
nodes/stress/position = Vector2(-960, 480)
node_connections = [&"Beam", 0, &"ShootRight", &"Beam", 1, &"beam", &"Dash", 0, &"Movement", &"Dash", 1, &"dash", &"Death", 0, &"Beam", &"Death", 1, &"death", &"Movement", 0, &"idle", &"Movement", 1, &"run", &"Movement", 2, &"jump", &"Movement", 3, &"stress", &"ShootLeft", 0, &"Dash", &"ShootLeft", 1, &"shootleft", &"ShootRight", 0, &"ShootLeft", &"ShootRight", 1, &"shootright", &"output", 0, &"Death"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_sirlr")

[node name="Model" parent="." instance=ExtResource("1_biyqc")]

[node name="Armature" parent="Model" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Skeleton3D" parent="Model/Armature" index="0"]
bones/0/position = Vector3(0, 0.258485, 0)
bones/0/rotation = Quaternion(-2.98023e-08, 1.19209e-07, 1.05879e-22, 1)
bones/1/rotation = Quaternion(-3.55271e-15, 1.77636e-14, -4.03897e-28, 1)
bones/2/rotation = Quaternion(0.00295186, -3.55245e-15, 1.04003e-08, 0.999996)
bones/3/rotation = Quaternion(7.02692e-07, -4.44532e-08, 0.989549, -0.144195)
bones/4/rotation = Quaternion(1.55497e-07, 7.76589e-09, -0.0179299, 0.999839)
bones/5/rotation = Quaternion(-9.38619e-07, -7.8832e-08, 0.989549, 0.144195)
bones/6/rotation = Quaternion(1.55497e-07, -7.76581e-09, 0.0179299, 0.999839)
bones/7/position = Vector3(0.21749, -0.0188073, 8.38476e-08)
bones/7/rotation = Quaternion(0.000879186, -0.0123999, 0.997421, -0.0706948)
bones/8/rotation = Quaternion(0.532417, -6.64599e-08, -0.0381116, 0.845624)
bones/9/position = Vector3(-0.21749, -0.0188073, -1.99513e-08)
bones/9/rotation = Quaternion(-0.000879395, -0.0123999, 0.997421, 0.0706948)
bones/10/rotation = Quaternion(0.532417, 6.13906e-08, 0.0381116, 0.845624)

[node name="Beam" type="Area3D" parent="Model"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 1, 0)
collision_mask = 5

[node name="Outer" type="GPUParticles3D" parent="Model/Beam"]
material_override = SubResource("ShaderMaterial_xu1t1")
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
fixed_fps = 75
local_coords = true
process_material = SubResource("ParticleProcessMaterial_jx7c5")
draw_pass_1 = ExtResource("3_gdp7b")

[node name="Inner" type="GPUParticles3D" parent="Model/Beam"]
material_override = SubResource("ShaderMaterial_xuvpp")
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
fixed_fps = 75
local_coords = true
process_material = SubResource("ParticleProcessMaterial_k7l8k")
draw_pass_1 = ExtResource("3_gdp7b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Model/Beam"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.62268e-07, 0, -6)
shape = SubResource("BoxShape3D_daryl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kmx8q")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Model")
tree_root = SubResource("AnimationNodeBlendTree_7es62")
anim_player = NodePath("../Model/AnimationPlayer")
parameters/Beam/active = false
parameters/Beam/internal_active = false
parameters/Beam/request = 0
parameters/Dash/active = false
parameters/Dash/internal_active = false
parameters/Dash/request = 0
parameters/Death/active = false
parameters/Death/internal_active = false
parameters/Death/request = 0
parameters/Movement/current_state = "Idle"
parameters/Movement/transition_request = ""
parameters/Movement/current_index = 0
parameters/ShootLeft/active = false
parameters/ShootLeft/internal_active = false
parameters/ShootLeft/request = 0
parameters/ShootRight/active = false
parameters/ShootRight/internal_active = false
parameters/ShootRight/request = 0

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ib7tl")

[node name="BeamSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_fjnvp")
volume_db = 5.0

[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_shoot_cooldown_timeout"]

[editable path="Model"]
